# IA

AntClustering/: pyproject.toml
AntClustering/src/: ant.py  board.py  front.py
SAT/: inputs.txt  main.py
multi-layer-perceptron/: args.py  main.py  model.py  plot.py
