[tool.poetry]
name = "antclustering"
version = "0.1.0"
description = ""
authors = ["Thiago Pimenta"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
numpy = "^1.25.2"
plotly = "^5.16.1"
streamlit-plotly-events = "^0.0.6"
scikit-learn = "^1.3.0"
pygame = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
